--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,13 @@ __pycache__/
 # C extensions
 *.so
 
+# Text backup files
+*.bak
+
+#Database
+*.sqlite3
+*.postgresql
+
 # Distribution / packaging
 .Python
 build/
